fix: changed z-index for the selects overlay

--- a/packages/select/dropdown/Dropdown.module.css
+++ b/packages/select/dropdown/Dropdown.module.css
@@ -21,6 +21,7 @@
 
   &.isOpen {
     border-color: var(--lido-ui-color-borders-hover);
+    z-index: 2;
   }
 
   &.isDisabled {
